# DTransformer

./: .gitignore  README.md  pyproject.toml
DBKT/: modules.py  utils.py
DTransformer/: config.py  data.py  eval.py  model.py  visualize.py
DTransformer/tests/: test_data.py  test_eval.py
baselines/: AKT.py  DKT.py  DKVMN.py
data/: .gitignore  datasets.toml
data/algebra05/: test.txt  train.txt
data/assist09/: test.txt  train.txt
data/assist17/: test.txt
data/statics/: test.txt  train.txt
notebooks/: attention.ipynb  tracing.ipynb
scripts/: plot_attn.py  plot_tracing.py  test.py  train.py
