[tool.poetry]
name = "DTransformer"
version = "0.1.0"
description = ""
authors = ["Yu Yin <yxonic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
numpy = "^1.23.1"
tomlkit = "^0.11.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
