[tool.poetry]
name = "DTransformer"
version = "0.1.0"
description = ""
authors = ["Yu Yin <yxonic@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^1.13.1"
numpy = "^1.23.1"
tomlkit = "^0.11.4"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
python-lsp-server = "^1.5.0"
python-lsp-black = "^1.2.1"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
